syntax = "proto3";
option csharp_namespace = "CecoChat.Contracts.State";
package CecoChat.Contracts.State;
import "google/protobuf/timestamp.proto";
import "state/chat-state.proto";

service State {
  rpc GetChats(GetChatsRequest) returns (GetChatsResponse);
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
}

message GetChatsRequest {
  google.protobuf.Timestamp newer_than = 1;
}

message GetChatsResponse {
  repeated ChatState chats = 1;
}

message SendMessageRequest {
  int64 message_id = 1;
  int64 receiver_id = 2;
}

message SendMessageResponse {
}