syntax = "proto3";
option csharp_namespace = "CecoChat.Contracts.History";
package CecoChat.Contracts.History;
import "google/protobuf/timestamp.proto";

service History {
  rpc GetUserHistory(GetUserHistoryRequest) returns (GetUserHistoryResponse);
  rpc GetChatHistory(GetChatHistoryRequest) returns (GetChatHistoryResponse);
}

message GetUserHistoryRequest {
  google.protobuf.Timestamp older_than = 1;
}

message GetUserHistoryResponse {
  repeated HistoryItem messages = 1;
}

message GetChatHistoryRequest {
  int64 other_user_id = 1;
  google.protobuf.Timestamp older_than = 2;
}

message GetChatHistoryResponse {
  repeated HistoryItem messages = 1;
}

message HistoryItem {
  int64 message_id = 1;
  int64 sender_id = 2;
  int64 receiver_id = 3;
  DataType data_type = 4;
  oneof item_data {
    string data = 5;
  }
  DeliveryStatus status = 6;
  map<int64, string> reactions = 7;
}

enum DataType {
  PLAIN_TEXT = 0;
}

enum DeliveryStatus {
  PROCESSED = 0;
  DELIVERED = 1;
  SEEN = 2;
}